--- a/app/templates/auth/edit_user.html
+++ b/app/templates/auth/edit_user.html
@@ -13,6 +13,13 @@
                 <form method="post" action="{{ url_for('auth.edit_user', id=user.id) }}">
                     {{ form.hidden_tag() }}
                     <div class="mb-3">
+                        {{ form.full_name.label(class="form-label") }}
+                        {{ form.full_name(class="form-control") }}
+                        {% for error in form.full_name.errors %}
+                        <div class="text-danger">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="mb-3">
                         {{ form.username.label(class="form-label") }}
                         {{ form.username(class="form-control") }}
                         {% for error in form.username.errors %}
